# scratch

./: DynFocus.hs  PolyTowerCombs.hs  annot-state.hs  corout.hs  knottying.hs  overload-demo.hs
coroutine-towers/: coroutine-tower.cabal  stack.yaml
coroutine-towers/app/: Main.hs
coroutine-towers/src/: BasicTramps.hs  BindCorout.hs  Cf.hs  ExistentialTowers.hs  FreeCorout.hs  IxCont.hs  ValueReturns.hs
doc/: sgagsa.tex
dyn-focus/: Main.hs  dyn-focus.cabal  stack.yaml
free-focus/: Main.hs  README.md  free-focus.cabal
set-reader-monad?/: LICENSE  set-reader-monad.cabal
set-reader-monad?/app/: Main.hs
set-reader-monad?/doc/: sgagsa.tex
set-reader-monad?/src/: NonDep.hs
type-driven/: PolySequence.hs  PolyTowerCombs.hs  comonad-categorial-typecheck.hs
