name:                coroutine-towers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dylnb/scraps
license:             BSD3
license-file:        LICENSE
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
copyright:           2016 Dylan Bumford
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IxCont
                     , ValueReturns
                     , BasicTramps
                     , FreeCorout
                     , Cf
                     , ExistentialTowers
  build-depends:       base >= 4.7 && < 5
                     , monad-coroutine
                     , mtl
                     , extra
                     , indexed
                     , indexed-free
                     , containers
  default-language:    Haskell2010

executable coroutine-towers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coroutine-towers
                     , monad-coroutine
                     , mtl
                     , extra
                     , indexed
                     , indexed-free
                     , containers
  default-language:    Haskell2010

test-suite corout-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , corout
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/scraps
