name:                dyn-focus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dylnb/scraps
license:             BSD3
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
copyright:           2016 Dylan Bumford
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable dyn-focus-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dyn-focus
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/scraps
