name:                free-focus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dylnb/free-focus#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
copyright:           2017 Dylan Bumford
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
                     , free
                     , comonad
  default-language:    Haskell2010

executable free-focus-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-focus
                     , free
                     , comonad
  default-language:    Haskell2010

-- test-suite free-focus-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , free-focus
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/free-focus
