name:                set-reader-monad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dylnb/scratch/set-reader-monad?#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
copyright:           2017 Dylan Bumford
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NonDep
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom
  default-language:    Haskell2010

executable set-reader-monad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , set-reader-monad
                     , MonadRandom
  default-language:    Haskell2010

test-suite set-reader-monad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , set-reader-monad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/scratch/set-reader-monad?
